# ChatWizard

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README-ZH_CN.md  README.md  RELEASE_NOTE.md  docker-compose.yml  latest.json  package.json  pnpm-lock.yaml  release.js  version.js
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml
.github/workflows/: release.yml
api/: Cargo.toml
api/src/: chat.rs  client.rs  command.rs  completion.rs  dist.rs  error.rs  image.rs  lib.rs  models.rs  result.rs  state.rs  types.rs  websocket.rs
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml  pbcopy  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
gui/icons/: icon.icns
gui/icons/linux/: icon.icns
gui/icons/macos/: icon.icns
gui/icons/windows/: icon.icns
gui/resources/macos/: sqlite3
gui/src/: chat.rs  commands.rs  error.rs  main.rs  project.rs  prompt.rs  schema_server.rs  setting.rs  state.rs  store.rs  tray.rs  uri_schema_handler.rs  utils.rs  window.rs
gui/src/chat/: chat_config.rs  chat_manager.rs  chat_store.rs  mod.rs
gui/src/market_prompt/: market_prompt_manager.rs  market_prompt_repo.rs  mod.rs
gui/src/prompt/: mod.rs  prompt_manager.rs  prompt_store.rs
gui/src/service/: mod.rs  prompt_market_service.rs
gui/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
gui/web/src/: App.tsx  Chat.tsx  config.ts  main.ts  router.ts  style.css
gui/web/src/api/: index.ts
gui/web/src/components/: Backtrack.tsx  Chat.tsx  ChatConfig.tsx  ChatExplorer.tsx  Cost.tsx  Explorer.tsx  PromptExplorer.tsx  Version.tsx
gui/web/src/components/chat/: Backtrack.tsx  Chat.tsx  ChatConfig.tsx  Header.tsx  History.tsx  UserInput.tsx
gui/web/src/hooks/: asyncData.ts  composition.ts  config.ts  i18n.ts  lazyLoad.ts  message.ts  prompt.ts  scroll.ts  state.ts  task.ts  version.ts  wait.ts
gui/web/src/i18n/: enUS.ts  index.ts  zhCN.ts
gui/web/src/models/: chat.ts  message.ts
gui/web/src/pages/: Chat.tsx  Main.tsx  Prompt.tsx
gui/web/src/pages/main/: Chat.tsx  Index.tsx  Prompt.tsx  PromptMarket.tsx  Setting.tsx
gui/web/src/pages/setting/: Index.tsx
gui/web/src/services/: chat.ts
gui/web/src/themes/: index.ts  types.ts
gui/web/src/themes/dark/: vars.ts
gui/web/src/themes/light/: vars.ts
gui/web/src/utils/: clipboard.ts  ensure.ts  interceptLink.ts  mdRender.ts  prompt.tsx  sleep.ts  theme.ts
plugin/: Cargo.toml
plugin/src/: lib.rs  plugin.rs
plugins/: Cargo.toml  test.wasm  wasi_snapshot_preview1.wasm
plugins/chat-wizard-plugin-commit-summary/: Cargo.toml
plugins/chat-wizard-plugin-commit-summary/examples/: test.rs
plugins/chat-wizard-plugin-commit-summary/src/: main.rs
plugins/src/: commit_summary.rs
plugins/wit/: host.wit
prompts/: index.json
prompts/data/: Rust Expert.json
prompts/en/: index.json
prompts/en/data/: AI Assisted Doctor.json  AI Trying to Escape the Box.json  AI Writing Tutor.json  Academician.json  Accountant.json  Advertiser.json  Aphorism Book.json  Artist Advisor.json  Ascii Artist.json  Astrologer.json  Automobile Mechanic.json  Babysitter.json  Biblical Translator.json  Buddha.json  Car Navigation System.json  Career Counselor.json  Character from Movie|Book|Anything.json  ChatGPT prompt generator.json  Chef.json  Chemical reactor.json  Chess Player.json  Chief Executive Officer.json  Classical Music Composer.json  Commentariat.json  Commit Message Generator.json  Composer.json  Cover Letter.json  Cyber Security Specialist.json  DIY Expert.json  Debate Coach.json  Debater.json  Dentist.json  Developer Relations consultant.json  Diagram Generator.json  Dietitian.json  Digital Art Gallery Guide.json  Doctor.json  Dream Interpreter.json  Drunk Person.json  Educational Content Creator.json  (+117 more)
server/: Cargo.toml
server/src/: main.rs  project.rs  utils.rs
service/: Cargo.toml  dev.sqlite
service/migrations/2023-03-27-032040_create_users/: up.sql
service/migrations/2023-03-27-034449_create_chats/: down.sql  up.sql
service/migrations/2023-03-27-034542_create_prompts/: down.sql  up.sql
service/migrations/2023-03-27-050510_create_chat_logs/: down.sql  up.sql
service/migrations/2023-03-27-051057_create_settings/: down.sql  up.sql
service/migrations/2023-03-28-071053_create_chat_models/: down.sql  up.sql
service/migrations/2023-03-28-075100_create_prompt_sources/: down.sql  up.sql
service/migrations/2023-03-31-220115_insert_fields_in_chats/: down.sql  up.sql
service/migrations/2023-04-02-015551_insert_fields_in_chats/: down.sql  up.sql
service/migrations/2023-04-05-070213_insert_fields_in_chat_logs/: down.sql  up.sql
service/migrations/2023-04-09-132044_insert_fields_in_settings/: down.sql  up.sql
service/migrations/2023-04-18-012509_create_plugins/: down.sql  up.sql
service/migrations/2023-08-01-012741_insert_home_page_into_settings/: down.sql  up.sql
service/migrations/2023-11-13-020211_insert_scale_in_settings/: down.sql  up.sql
service/src/: commands.rs  conn.rs  error.rs  init.rs  lib.rs  project.rs  schema.rs  test.rs  types.rs  utils.rs
service/src/api/: client.rs  mod.rs
service/src/api/openai/: mod.rs  response.rs
service/src/api/openai/chat/: mod.rs  params.rs
service/src/commands/: cmd.rs  exec.rs  mod.rs
service/src/database/: conn.rs  mod.rs  pagination.rs  sort.rs
service/src/models/: chat.rs  chat_log.rs  chat_model.rs  mod.rs  plugin.rs  prompt.rs  prompt_source.rs  setting.rs  user.rs
service/src/plugin/: mod.rs
service/src/plugin/wit/: host.wit
service/src/repositories/: chat.rs  chat_log.rs  chat_model.rs  mod.rs  plugin.rs  prompt.rs  prompt_source.rs  setting.rs  user.rs
service/src/services/: chat.rs  mod.rs  openai_chat.rs  plugin.rs  plugin_market.rs  prompt.rs  prompt_market.rs  setting.rs
service/wit/: host.wit
tools/: parse.js
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
web/src/: App.tsx  config.ts  router.ts  style.css
web/src/api/: index.ts
web/src/components/: DragBar.tsx  Explorer.tsx  Version.tsx
(+58 files in other folders)
