[package]
name = "chat-wizard-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
log = "0.4.17"
futures-util = "0.3.26"
futures = "0.3.26"
thiserror = "1.0.39"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tiktoken-rs = "0.3.2"
axum = { version = "0.6.12", features = ["ws"] }
tokio = "1.25.0"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }


[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.25.0", features = ["full"] }
