[package]
name = "chat-wizard-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-wizard-service = { path = "../service" }
clap = { version = "4.2.4", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros"] }
