[package]
name = "askai"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
askai-api = { path = "../api" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.2", features = ["clipboard-write-text", "dialog-save", "os-all", "process-relaunch", "shell-open", "updater", "window-create", "window-start-dragging"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json", "stream"] }
log = "0.4.17"
futures-util = "0.3.26"
futures = "0.3.26"
thiserror = "1.0.39"
env_logger = "0.10.0"
directories = "4.0.1"
toml = "0.7.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
