[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chat-wizard-api = { path = "../api" }
chat-wizard-service = { path = "../service" }
directories = "5.0.0"
env_logger = "0.10.0"
tokio = { version = "1.27.0", features = ["full"] }
