[package]
name = "chat-wizard-server"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = "4.3.11"
directories = "5.0.0"
env_logger = "0.10.0"

  [dependencies.chat-wizard-api]
  path = "../api"

  [dependencies.chat-wizard-service]
  path = "../service"

  [dependencies.tokio]
  version = "1.27.0"
  features = [ "full" ]
