[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", features = ["sqlite", "serde_json", "chrono", "uuid", "r2d2"] }
thiserror = "1.0.40"
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15.7"
