[package]
name = "wizard-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", features = [
  "sqlite",
  "serde_json",
  "chrono",
  "uuid",
  "r2d2",
] }
diesel_migrations = "2.0.0"
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = ["bundled"] }
futures = "0.3.27"
reqwest = { version = "0.11.16", features = ["json", "stream"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
tiktoken-rs = "0.3.3"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = { version = "1.27.0", features = ["full"]}
log = "0.4.17"
csv = "1.2.1"

[dev-dependencies]
dotenvy = "0.15.7"
once_cell = "1.17.1"
